--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nivo/radar": "^0.61.1",
     "axios": "^0.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -11,8 +12,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
-    "react-vis": "^1.11.7"
+    "react-scripts": "3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
