--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mysql": "^2.17.1",
+    "mysql2": "^2.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
@@ -15,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev:server": "nodemon ./public/server.js",
+    "dev": "concurrently \"npm run dev:server\" \"npm run start\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,5 +34,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "concurrently": "^5.0.2",
+    "cors": "^2.8.5",
+    "nodemon": "^2.0.2"
+  },
+  "proxy": "http://localhost:3306"
 }
