successfully connected front and back ends

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev:server": "nodemon ./public/server.js",
-    "dev": "concurrently \"npm run dev:server\" \"npm run start\""
+    "dev": "concurrently --kill-others-on-fail \"npm run dev:server\" \"npm run start\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,5 +40,5 @@
     "cors": "^2.8.5",
     "nodemon": "^2.0.2"
   },
-  "proxy": "http://localhost:3306"
+    "proxy": "http://localhost:3001"
 }
