--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "mysql2": "^2.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -40,5 +41,5 @@
     "cors": "^2.8.5",
     "nodemon": "^2.0.2"
   },
-    "proxy": "http://localhost:3001"
+  "proxy": "http://localhost:3001"
 }
